--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,10 +5,12 @@ spring:
   # JPA 설정
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         format_sql: true
+        show_sql: true
+
 
   # HTML, CSS, JS 수정 시 서버를 재시작 하지 않아도 새로고침 할 수 있는 설정
   devtools:
@@ -18,3 +20,9 @@ spring:
       enabled: true
   thymeleaf:
     cache: false
+
+  # JPA query parameter log
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.hibernate.orm.jdbc.bind: trace
