--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,34 +1,9 @@
 spring:
   profiles:
-    include: db
+    default: local
 
-  # JPA 설정
-  jpa:
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        format_sql: true
-        show_sql: true
-
-
-  # HTML, CSS, JS 수정 시 서버를 재시작 하지 않아도 새로고침 할 수 있는 설정
-  devtools:
-    livereload:
-      enabled: true
-    restart:
-      enabled: true
-  thymeleaf:
-    cache: false
-
-  # form 태그에서 put, delete 등의 요청이 가능하도록 설정
-  mvc:
-    hiddenmethod:
-      filter:
-        enabled: true
-
-  # JPA query parameter log
-logging:
-  level:
-    org.hibernate.SQL: debug
-    org.hibernate.orm.jdbc.bind: trace
+---
+spring:
+  config:
+    activate:
+      on-profile: local, dev, prd
